# internal/route/api.go
@@ -8,11 +8,12 @@ import (
 func AddRoute(g *gin.Engine) {
 
 	userController := &api.UserController{}
-	v1 := g.Group("/api")
+	v1 := g.Group("/api/")
 	{
-		v1.GET("/user", userController.List)
-		v1.POST("/user", userController.Add)
-		v1.DELETE("/user", userController.Delete)
+		v1.GET("/users", userController.List)
+		v1.POST("/users", userController.Add)
+		v1.DELETE("/users/:userId", userController.Delete)
+		v1.PUT("/users", userController.Update)
 	}
 
 }
